<resources>
    <string name="app_name">MultipleLanguageApp</string>
<!--    to support multiple language we must write in string.xml-->
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Do not own an account? Sign Up</string>
    <string name="ChangeLang">Change Language</string>

</resources>